--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-native-community/datetimepicker": "^8.3.0",
+    "@react-native-community/netinfo": "^11.4.1",
     "@react-native-picker/picker": "^2.11.0",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
@@ -20,11 +21,18 @@
     "react": "19.0.0",
     "react-native": "0.79.1",
     "react-native-app-intro-slider": "^4.0.4",
+    "react-native-gesture-handler": "^2.25.0",
+    "react-native-haptic-feedback": "^2.3.3",
     "react-native-image-picker": "^8.2.0",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-reanimated": "^3.17.5",
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "^4.10.0",
+    "react-native-svg": "^15.11.2",
     "react-native-vector-icons": "^10.2.0",
+    "react-native-video": "^6.13.0",
+    "stream-chat": "^9.0.0",
+    "stream-chat-react-native": "^7.0.0",
     "zod": "^3.24.3"
   },
   "devDependencies": {
