--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-native-svg": "^15.11.2",
     "react-native-vector-icons": "^10.2.0",
     "react-native-video": "^6.13.0",
+    "react-native-video-thumbnail": "^1.0.1",
     "stream-chat": "^9.0.0",
     "stream-chat-react-native": "^7.0.0",
     "zod": "^3.24.3"
