--- a/package.json
+++ b/package.json
@@ -15,16 +15,23 @@
     "@react-native-community/datetimepicker": "^8.3.0",
     "@react-native-community/hooks": "^100.1.0",
     "@react-native-community/netinfo": "^11.4.1",
+    "@react-native-community/slider": "^4.5.6",
     "@react-native-picker/picker": "^2.11.0",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/native-stack": "^7.3.10",
+    "@shopify/react-native-skia": "^2.0.0",
     "axios": "^1.8.4",
     "burnt": "^0.13.0",
+    "expo-gl": "^15.1.5",
+    "expo-gl-cpp": "^11.4.0",
+    "gl-react": "^5.2.0",
+    "gl-react-native": "^5.2.1",
     "react": "19.0.0",
     "react-native": "0.79.1",
     "react-native-app-intro-slider": "^4.0.4",
     "react-native-flash-message": "^0.4.2",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.25.0",
     "react-native-haptic-feedback": "^2.3.3",
     "react-native-image-picker": "^8.2.0",
@@ -35,8 +42,10 @@
     "react-native-screens": "^4.10.0",
     "react-native-svg": "^15.11.2",
     "react-native-toast-message": "^2.3.0",
+    "react-native-unimodules": "^0.15.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-video": "^6.14.0",
+    "react-native-view-shot": "^4.0.3",
     "sonner-native": "^0.19.1",
     "zod": "^3.24.3"
   },
@@ -51,6 +60,7 @@
     "@react-native/eslint-config": "0.79.1",
     "@react-native/metro-config": "0.79.1",
     "@react-native/typescript-config": "0.79.1",
+    "@types/gl-react-native": "^3.15.8",
     "@types/jest": "^29.5.13",
     "@types/react": "^19.0.0",
     "@types/react-test-renderer": "^19.0.0",
