--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-native-vector-icons": "^10.2.0",
     "react-native-video": "^6.14.0",
     "react-native-view-shot": "^4.0.3",
+    "socket.io-client": "^4.8.1",
     "sonner-native": "^0.19.1",
     "zod": "^3.24.3"
   },
