--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "expo-gl-cpp": "^11.4.0",
     "gl-react": "^5.2.0",
     "gl-react-native": "^5.2.1",
+    "moment": "^2.30.1",
     "react": "19.0.0",
     "react-native": "0.79.1",
     "react-native-app-intro-slider": "^4.0.4",
