--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "@react-native-camera-roll/camera-roll": "^7.10.0",
     "@react-native-community/datetimepicker": "^8.3.0",
     "@react-native-community/hooks": "^100.1.0",
+    "@react-native-community/masked-view": "^0.1.11",
     "@react-native-community/netinfo": "^11.4.1",
     "@react-native-community/slider": "^4.5.6",
     "@react-native-picker/picker": "^2.11.0",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/native-stack": "^7.3.10",
+    "@reduxjs/toolkit": "^2.8.2",
     "@shopify/react-native-skia": "^2.0.0",
     "axios": "^1.8.4",
     "burnt": "^0.13.0",
@@ -27,6 +29,8 @@
     "expo-gl-cpp": "^11.4.0",
     "gl-react": "^5.2.0",
     "gl-react-native": "^5.2.1",
+    "lottie-ios": "^4.5.1",
+    "lottie-react-native": "^7.2.3",
     "moment": "^2.30.1",
     "react": "19.0.0",
     "react-native": "0.79.1",
@@ -36,18 +40,27 @@
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.25.0",
     "react-native-haptic-feedback": "^2.3.3",
+    "react-native-heroicons": "^4.0.0",
     "react-native-image-picker": "^8.2.0",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-mmkv": "^3.3.0",
+    "react-native-modal": "^14.0.0-rc.1",
+    "react-native-pager-view": "^6.8.1",
     "react-native-permissions": "^5.4.0",
     "react-native-reanimated": "^3.17.5",
+    "react-native-responsive-fontsize": "^0.5.1",
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "^4.10.0",
+    "react-native-sound-player": "^0.14.5",
     "react-native-svg": "^15.11.2",
     "react-native-toast-message": "^2.3.0",
     "react-native-unimodules": "^0.15.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-video": "^6.14.0",
     "react-native-view-shot": "^4.0.3",
+    "react-redux": "^9.2.0",
+    "redux": "^5.0.1",
+    "redux-persist": "^6.0.0",
     "socket.io-client": "^4.8.1",
     "sonner-native": "^0.19.1",
     "zod": "^3.24.3"
@@ -67,9 +80,12 @@
     "@types/jest": "^29.5.13",
     "@types/react": "^19.0.0",
     "@types/react-test-renderer": "^19.0.0",
+    "babel-plugin-module-resolver": "^5.0.2",
+    "babel-plugin-transform-remove-console": "^6.9.4",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
+    "react-native-svg-transformer": "^1.5.1",
     "react-test-renderer": "19.0.0",
     "typescript": "5.0.4"
   },
